Details
-
Bug
-
Status: Resolved
-
P4
-
Resolution: Fixed
-
11, 12
-
b20
-
aarch64
-
linux
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8259445 | 11.0.11-oracle | Fairoz Matte | P4 | Resolved | Fixed | b01 |
JDK-8221239 | 11.0.4 | Andrew Haley | P4 | Resolved | Fixed | b01 |
JDK-8260819 | openjdk8u292 | Andrew Hughes | P4 | Resolved | Fixed | b01 |
Description
vmTestbase/nsk/jvmti/scenarios/hotswap/HS202/hs202t002/hs202t002.java
This JVMTI test failed because of a SIGBUS. It requires some background knowledge of JVMTI before investigating this failure.
This JVMTI test failed because of a SIGBUS. It requires some background knowledge of JVMTI before investigating this failure.
Attachments
Issue Links
- backported by
-
JDK-8221239 Fix JVMTI test failure HS202
-
- Resolved
-
-
JDK-8259445 Fix JVMTI test failure HS202
-
- Resolved
-
-
JDK-8260819 Fix JVMTI test failure HS202
-
- Resolved
-
- duplicates
-
JDK-8256448 hotswap/HS202/hs202t002/hs202t002.java failed with exit code 97 in aarch64
-
- Closed
-
- relates to
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-